--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Xiao Song"
 title_separator          : "-"
 name                     : &name "Xiao Song"
 description              : &description "CUDA Engineer at NVIDIA (Beijing)"
-url                      : https://XiaoSong9905.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://XiaoSongXS.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "XiaoSong9905.github.io"
+repository               : "XiaoSongXS.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "xiaosong9905 you-know-what gmail"
+  email            :
   researchgate     : 
   uri              :
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "xiaosong9905"
+  github           : "XiaoSongXS"
   google_plus      :
   keybase          :
   instagram        :
